# Forge2D

./: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  SAVE_LOAD_ISSUE.md  TODO.md  physics_scene.json  test_size
docs/: README.md  ROADMAP.md  animation.md  api-reference.md  assets.md  audio.md  camera.md  engine.md  entities.md  examples.md  fixed-timestep.md  getting-started.md  grid.md  input.md  math.md  particles.md  pathfinding.md  physics.md  rendering.md  scene.md  scripting.md  state-management.md  world.md
editor/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json
editor/src/: App.css  App.tsx  FileExplorer.tsx  Gizmo.tsx  Hierarchy.tsx  Inspector.tsx  PanelContainer.css  PanelContainer.tsx  ResizablePanel.css  ResizablePanel.tsx  Splitter.css  Splitter.tsx  SplitterOverlay.tsx  Tab.css  Tab.tsx  Toolbar.tsx  Viewport.tsx  Welcome.tsx  main.rs
examples/age_of_empires_demo/: Cargo.toml
examples/age_of_empires_demo/src/: entities.rs  game.rs  main.rs  resources.rs  systems.rs  ui.rs
examples/animation_demo/: Cargo.toml
examples/animation_demo/src/: main.rs
examples/asteroids_demo/: Cargo.toml
examples/asteroids_demo/src/: entities.rs  game.rs  main.rs
examples/basic_game/: Cargo.toml
examples/basic_game/src/: main.rs
examples/camera_demo/: Cargo.toml
examples/camera_demo/src/: main.rs
examples/full_game/: Cargo.toml
examples/full_game/src/: main.rs
examples/grid_demo/: Cargo.toml
examples/grid_demo/src/: main.rs
examples/lighting_demo/: Cargo.toml
examples/lighting_demo/src/: main.rs
examples/particles_demo/: Cargo.toml
examples/particles_demo/src/: main.rs
examples/pathfinding_demo/: Cargo.toml
examples/pathfinding_demo/src/: main.rs
examples/performance_demo/: Cargo.toml
examples/performance_demo/src/: main.rs
examples/physics_demo/: Cargo.toml
examples/physics_demo/src/: main.rs
examples/platformer_demo/: Cargo.toml
examples/platformer_demo/src/: main.rs
examples/scripted_grid_demo/: Cargo.toml
examples/scripted_grid_demo/scripts/: animated_agent.lua  grid_agent.lua  tilemap_editor.lua
examples/scripted_grid_demo/src/: main.rs
examples/scripting_demo/: Cargo.toml
examples/scripting_demo/scripts/: benchmark_entity.lua  comprehensive_test.lua  scripting_demo_player.lua  scripting_demo_player.rhai
examples/scripting_demo/src/: main.rs
examples/scripts/: player_movement.rhai  scripting_demo_player.rhai
examples/simple_test/: Cargo.toml
examples/simple_test/src/: main.rs
examples/state_demo/: Cargo.toml
examples/state_demo/src/: main.rs
examples/tilemap_editor_demo/: Cargo.toml
examples/tilemap_editor_demo/src/: main.rs
forge2d/: Cargo.toml
forge2d/src/: assets.rs  audio.rs  camera.rs  commands.rs  component_metadata.rs  engine.rs  entities.rs  fonts.rs  grid.rs  hierarchy.rs  hud.rs  input.rs  lib.rs  math.rs  pathfinding.rs  physics.rs  scene.rs  script.rs  script.rs.rhai_backup  state.rs  world.rs
forge2d/src/render/: animation.rs  composite.wgsl  light.rs  light.wgsl  mod.rs  particles.rs  shape.wgsl  sprite.rs  sprite.wgsl  text.rs  tilemap.rs  wgpu_backend.rs
