[workspace]
members = [
    "forge2d",
    "examples/basic_game",
    "examples/state_demo",
    "examples/full_game",
    "examples/physics_demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Forge2D Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1"
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.24"
image = { version = "0.24", default-features = false, features = ["png"] }
rodio = "0.17"
ab_glyph = "0.2"
rapier2d = "0.14"
