[workspace]
members = [
    "forge2d",
    "examples/basic_game",
    "examples/state_demo",
    "examples/full_game",
    "examples/physics_demo",
    "examples/pathfinding_demo",
    "examples/platformer_demo",
    "examples/grid_demo",
    "examples/performance_demo",
    "examples/age_of_empires_demo",
    "examples/asteroids_demo",
    "examples/simple_test",
    "examples/camera_demo",
    "examples/lighting_demo",
    "examples/particles_demo",
    "examples/animation_demo",
    "examples/scripting_demo",
    "examples/scripted_grid_demo",
    "examples/tilemap_editor_demo",
    "editor",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Forge2D Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1"
winit = "0.30"
wgpu = "28"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.24"
image = { version = "0.24", default-features = false, features = ["png"] }
rodio = "0.17"
ab_glyph = "0.2"
glyphon = "0.10"
rapier2d = "0.14"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
