[package]
name = "forge2d_editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
forge2d = { path = "../forge2d" }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

